- New memory command (bconsole) that will print the current Director's
  memory usage, and a in use buffer dump.
- Solaris door and event port files are no longer restored.
- Console name changed from *Console* to -Console- to accomodate Win32
  filename restrictions.  
- Corrected Win32 ftruncate bug.
- Additional version information added to Job reports.
- New -8 option for bsmtp to specify UTF-8 encoding type.
- bsmtp will no longer add < > to target (from, to, cc) if there
  is already a < in the target.
- Perfer Mounted Volumes extended to mean a volume that is being
  mounted by another job.
- Runscript timing set to same as version 1.38.11
- New TLS Allowed CN directive(s) permitted.
- New bconsole 'exec' command to run external script/command.
- Turn on FreeBSD/OpenBSD code to set EOT model on tape.
- Drop from root done before database is opened.
- database user and name can be configured with:
  --with-db-name=name --with-db-user=user
- turn on wait_for_drive in mtx-changer script.
- rework how bar codes are handled in mtx-changer script.
  This appears to have been an unreported bug.
- Updated nagios plugin supplied by Christian Masopust
- Better restricted console ACL checking.
- New Client Connect Wait directive in Storage daemon so that
  users can configure how long SD waits for FD connection.
- Bacula will no longer permit pruning of the currently running
  job (note, if other jobs are running, they may be pruned).
- Sockets are no longer restored.
- dbcheck works in 300K chunks so will typically run faster.
- Include/Exclude lists can now be efficiently handled for quite
  large sizes -- tens of thousands of entries.
- Several memory leaks in migration and database usage were fixed.
- New console keyword restoreclient, which specifies the client to
  which the restore will be sent. The client keyword specifies 
  the backup client. The restoreclient keyword is optional if it is
  not specified, the backup client will also be the restore client.